--- a/Ladeskab/Ladeskab.csproj
+++ b/Ladeskab/Ladeskab.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="NSubstitute" Version="4.2.2" />
+    <PackageReference Include="NunitXml.TestLogger" Version="2.1.80" />
   </ItemGroup>
 
 </Project>
